# idtree

./: Cargo.toml  README  README.md  build.rs  pyproject.toml
benches/: README.md  bench.rs  bench_cpp_idtree.rs  bench_idtree.rs  common.rs
benches/data/: bdo_exploration_graph.mtx
cpp/: dndtree.h  dndtree_wrapper.cpp  dndtree_wrapper.h
examples/: profile.rs
src/: bridge.rs  idtree.rs  idtree_bkup.rs  idtree_bkup2.rs  lib.rs  python_idtree.rs
tests/: test.rs
