[package]
name = "idtree"
version = "0.1.2"
edition = "2024"
license = "Unlicense"
description = "ID-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/idtree"
documentation = "https://docs.rs/idtree"

[lib]
name = "idtree"
crate-type = ["rlib", "cdylib"]

[dependencies]
fixedbitset = "0.5"
nohash-hasher = "0.2"
rapidhash = "4.4.1"
smallvec = "1.15.1"

[dev-dependencies]
divan = "0.1.21"
rand = "0.10.0"
hdrhistogram = "7.5.4"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"

[features]
default = []
python = ["pyo3"]

[dependencies.pyo3]
version = "0.28.2"
optional = true
features = ["extension-module"]

[[bench]]
name = "bench"
harness = false
