[package]
name = "idtree"
version = "0.2.0"
edition = "2024"
license = "Unlicense"
description = "ID-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/idtree"
documentation = "https://docs.rs/idtree"

[lib]
name = "idtree"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true

[dependencies]
cxx = "1.0"
fixedbitset = "0.5"
log = "0.4.29"
nohash-hasher = "0.2"
rapidhash = "4.4.1"
simple_logger = "5.2.0"
smallvec = "1.15.1"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
divan = "0.1.21"
rand = "0.10.0"
hdrhistogram = "7.5.4"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"

[features]
default = []
python = ["pyo3"]

[dependencies.pyo3]
version = "0.28.2"
optional = true
features = ["extension-module"]

[[bench]]
name = "bench"
harness = false
