[package]
name = "idtree"
version = "0.3.0"
edition = "2024"
license = "Unlicense"
description = "ID-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/idtree"
documentation = "https://docs.rs/idtree"

[lib]
name = "idtree"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true

[dependencies]
fixedbitset = "0.5"
nohash-hasher = "0.2"
rapidhash = "4.4.1"
simple_logger = "5.2.0"
smallvec = "1.15.1"

# Optional dependencies for features
cxx = { version = "1.0", optional = true }
pyo3 = { version = "0.23.2", optional = true, features = ["extension-module"] }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
divan = "0.1.21"
log = "0.4.29"
rand = "0.10.0"
hdrhistogram = "7.5.4"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"

[features]
default = []
python = ["pyo3"]
cpp = ["dep:cxx", "dep:cxx-build"]

[[bench]]
name = "bench_idtree"
harness = false

[[bench]]
name = "bench_cpp_idtree"
harness = false
