[project]
name = "idtree"
version = "0.1.0"
description = "Python bindings for the ID-Tree dynamic connectivity data structure"
authors = [{ name = "Thell" }]
readme = "README.md"
license = { text = "UNLICENSE" }
requires-python = ">=3.13"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://crates.io/crates/idtree"
Repository = "https://github.com/Thell/idtree"
Documentation = "https://docs.rs/idtree"

[tool.maturin]
features = ["python"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
